# scrap-prediction-tool-main

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/M-221/: M-221HydraData.csv  M-221ParamData.csv
data/M-601/: M-601ParamData.csv
forecasting_v2/: app_v2.py  app_v3.py
forecasting_v2/scripts/: 0_prepare_sensor_data.py  1_create_daily_data.py  2_train_forecaster.py  3_predict_future.py  4_train_sensor_model.py  check_columns.py  check_machine_data.py  debug_merge.py
scripts/: analyze_join_keys.py  compare_models.py  create_ml_dataset.py  process_vertical_data.py  profile_param_data.py  train_baseline_model.py  train_final_model.py  train_risk_classifier.py  validate_model.py  view_aggregated_data.py  visualize_results.py
src/: __init__.py  config.py  data_aggregation.py  data_joining.py  data_loading.py  data_validation.py
